# iheartla

./: .gitignore  LA.ebnf  LICENSE  Pipfile  README.md  README_HeartDown.md  app.py  code_of_conduct.md  environment-cli.yml  environment-dev.yml  environment-gui.yml  environment-heartdown.yml  environment-server.yml  gen_local_parsers.py  iheartla.spec  linear_algebra.py  pack_release.sh  pyproject.toml  requirements.freeze.txt  requirements.txt  run_test.sh  server.py  setup.py
docs/: PyYAML-6.0-cp38-cp38-macosx_10_9_x86_64.whl  TatSu-4.4.0-py2.py3-none-any.whl  Text Substitutions.plist  iheartla-0.0.1-py3-none-any.whl  index.html  linear_algebra-0.0.1-py3-none-any.whl  pybtex-0.24.0-py2.py3-none-any.whl
extras/: Text Substitutions.plist
iheartla/: __main__.py  babyheartdown.py  compiler.py
la_grammar/: LA.ebnf  LA_ebnf.py  base.ebnf  keywords.ebnf  matrix.ebnf  number.ebnf  number_ebnf.py  operators.ebnf  shared.ebnf  shared_ebnf.py  simplified_grammar.ebnf  trigonometry.ebnf
la_gui/: base_ctrl.py  cpp_ctrl.py  frame.py  la_ctrl.py  latex_panel.py  mid_panel.py  msg_panel.py  python_ctrl.py  text_ctrl.py
la_local_parsers/: default_parser.py  grammar_c21f969b5f03d33d43e04f8f136e7682.py  grammar_e37f0136aa3ffaf149b351f6a4c948e9.py  init_parser.py  parser_c21f969b5f03d33d43e04f8f136e7682_2020-10-29-16-46-46.py  parser_c21f969b5f03d33d43e04f8f136e7682_2020-11-09-21-26-13.py  parser_c21f969b5f03d33d43e04f8f136e7682_2020-12-28-11-49-28.py  parser_e37f0136aa3ffaf149b351f6a4c948e9_2020-10-29-16-46-39.py  parser_e37f0136aa3ffaf149b351f6a4c948e9_2020-11-09-21-26-03.py  (+2 more)
(+945 files in other folders)
