[tool.poetry]
name = "linear_algebra"
version = "0.1.0"
description = "I heart LA"
authors = ["Yong Li <190361902@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tatsu = "^4.4"
wxpython = "^4.1.0"
PyMuPDF = "^1.17.0"
graphviz = "^0.14"

[tool.poetry.dev-dependencies]
cppyy = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
