[tool.poetry]
name = "linear_algebra"
version = "0.1.0"
description = "I heart LA"
authors = ["Yong Li <pressure36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tatsu = "^4.4"
wxpython = "^4.1.0"
PyMuPDF = "^1.17.0"
graphviz = "^0.14"
regex = "^2020.7.14"
appdirs = "^1.4.4"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
cppyy = "^1.7.1"
numpy = "^1.21.0"
scipy = "^1.5.2"
pyinstaller = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
